--- a/src/app/blog/edit-blog/edit-blog.component.html
+++ b/src/app/blog/edit-blog/edit-blog.component.html
@@ -6,7 +6,7 @@
  categories
 
 -->
-<mat-toolbar class="edit-toolbar">hello dolly</mat-toolbar>
+<!--<mat-toolbar class="edit-toolbar">hello dolly</mat-toolbar>-->
 <mat-tab-group >
     <mat-tab >
         <ng-template mat-tab-label >
