--- a/src/app/blog/find-blog/find-blog.component.html
+++ b/src/app/blog/find-blog/find-blog.component.html
@@ -1,4 +1,7 @@
 
+<mat-form-field>
+    <input type="text" matInput placeholder="search" (keyup)="keyup($event)">
+</mat-form-field>
 
 <mat-list>
     <mat-list-item *ngFor="let itm of blogs">
